# carbsmart

./: .dockerignore  .gitignore  CLAUDE.md  CarbSmart.md  Dockerfile  NOTES.md  alembic.ini  justfile  main.py  pyproject.toml  requirements.txt
.claude/: launch.json
alembic/: env.py
alembic/versions/: 20260203_0001_create_pans.py
app/: __init__.py  db.py  db_models.py  main.py  models.py
app/api/: router.py
app/api/routes/: calc.py  pans.py
app/repositories/: pans.py
app/services/: calc.py
app/templates/: base.html
app/templates/calc/: mini.html  page.html
app/templates/pans/: edit.html  list.html
app/web/: __init__.py  router.py  templates.py
app/web/routes/: calc.py  pans.py
tests/: conftest.py  test_api_calc.py  test_api_pans.py  test_calc_service.py  test_models.py  test_repository_pans.py  test_web_calc.py
