[project]
name = "carbsmart"
version = "0.2.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic",
  "fastapi",
  "jinja2",
  "python-multipart",
  "sqlalchemy>=2.0",
  "uvicorn",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["httpx>=0.27", "pytest>=9.0.2", "pytest-sugar>=1.1.1"]
